assign null to swagger.security at registarUsuario and login routes
