# src/routes/userRoutes.js
@@ -7,9 +7,13 @@ const authUser = require("../middlewares/authUser");
 
 //rutas users (delego al manejador el request y response de la solicitud)
 
-userRouter.post("/registrarUsuario", userHandler.createUserHandler);
+userRouter.post("/registrarUsuario", userHandler.createUserHandler, 
+ // #swagger.security = null
+ );
 //login
-userRouter.post("/login", loginHandler.login); //devuelve un token
+userRouter.post("/login", loginHandler.login, 
+ // #swagger.security = null
+ ); //devuelve un token
 
 userRouter.get(
   "/admin/usuarios",
